# api-tita-gcr-cloud-run

./: Dockerfile  README.md  main.py  make_model.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci-tests.yml  cloudrun.yml
