[tool.poetry]
name = "api_tita"
version = "0.1.0"
description = ""
authors = ["MonsieurDa <azmout@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
pandas = "^1.3.5"
numpy = "^1.22.1"
fastapi = "^0.71.0"
joblib = "^1.1.0"
uvicorn = {extras = ["standart"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]
numpy = "^1.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
